@@ -27,7 +27,6 @@ import static org.apache.parquet.hadoop.TestInputFormat.makeBlockFromStats;
 import static org.junit.Assert.assertEquals;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
@@ -88,36 +87,36 @@ public class TestRowGroupFilter {
     set1.add(10);
     set1.add(50);
     List<BlockMetaData> filtered = RowGroupFilter.filterRowGroups(FilterCompat.get(in(foo, set1)), blocks, schema);
-    assertEquals(Arrays.asList(b1, b2, b5), filtered);
+    assertEquals(List.of(b1, b2, b5), filtered);
     filtered = RowGroupFilter.filterRowGroups(FilterCompat.get(notIn(foo, set1)), blocks, schema);
-    assertEquals(Arrays.asList(b1, b2, b3, b4, b5, b6), filtered);
+    assertEquals(List.of(b1, b2, b3, b4, b5, b6), filtered);
 
     Set<Integer> set2 = new HashSet<>();
     set2.add(null);
     filtered = RowGroupFilter.filterRowGroups(FilterCompat.get(in(foo, set2)), blocks, schema);
-    assertEquals(Arrays.asList(b1, b3, b4, b5, b6), filtered);
+    assertEquals(List.of(b1, b3, b4, b5, b6), filtered);
     filtered = RowGroupFilter.filterRowGroups(FilterCompat.get(notIn(foo, set2)), blocks, schema);
-    assertEquals(Arrays.asList(b1, b2, b3, b4, b5, b6), filtered);
+    assertEquals(List.of(b1, b2, b3, b4, b5, b6), filtered);
 
     set2.add(8);
     filtered = RowGroupFilter.filterRowGroups(FilterCompat.get(in(foo, set2)), blocks, schema);
-    assertEquals(Arrays.asList(b1, b2, b3, b4, b5, b6), filtered);
+    assertEquals(List.of(b1, b2, b3, b4, b5, b6), filtered);
     filtered = RowGroupFilter.filterRowGroups(FilterCompat.get(notIn(foo, set2)), blocks, schema);
-    assertEquals(Arrays.asList(b1, b2, b3, b4, b5, b6), filtered);
+    assertEquals(List.of(b1, b2, b3, b4, b5, b6), filtered);
 
     filtered = RowGroupFilter.filterRowGroups(FilterCompat.get(eq(foo, 50)), blocks, schema);
-    assertEquals(Arrays.asList(b1, b2, b5), filtered);
+    assertEquals(List.of(b1, b2, b5), filtered);
 
     filtered = RowGroupFilter.filterRowGroups(FilterCompat.get(notEq(foo, 50)), blocks, schema);
-    assertEquals(Arrays.asList(b1, b2, b3, b4, b5, b6), filtered);
+    assertEquals(List.of(b1, b2, b3, b4, b5, b6), filtered);
 
     filtered = RowGroupFilter.filterRowGroups(FilterCompat.get(eq(foo, null)), blocks, schema);
-    assertEquals(Arrays.asList(b1, b3, b4, b5, b6), filtered);
+    assertEquals(List.of(b1, b3, b4, b5, b6), filtered);
 
     filtered = RowGroupFilter.filterRowGroups(FilterCompat.get(notEq(foo, null)), blocks, schema);
-    assertEquals(Arrays.asList(b1, b2, b3, b5, b6), filtered);
+    assertEquals(List.of(b1, b2, b3, b5, b6), filtered);
 
     filtered = RowGroupFilter.filterRowGroups(FilterCompat.get(eq(foo, 0)), blocks, schema);
-    assertEquals(Arrays.asList(b6), filtered);
+    assertEquals(List.of(b6), filtered);
   }
 }
