@@ -46,7 +46,6 @@ import java.io.IOException;
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -161,7 +160,7 @@ public class TestParquetFileWriter {
 
   @Parameterized.Parameters(name = "vectored : {0}")
   public static List<Boolean> params() {
-    return Arrays.asList(true, false);
+    return List.of(true, false);
   }
 
   /**
@@ -312,8 +311,8 @@ public class TestParquetFileWriter {
           configuration,
           readFooter.getFileMetaData(),
           path,
-          Arrays.asList(rowGroup),
-          Arrays.asList(SCHEMA.getColumnDescription(PATH1)))) {
+          List.of(rowGroup),
+          List.of(SCHEMA.getColumnDescription(PATH1)))) {
         PageReadStore pages = r.readNextRowGroup();
         assertEquals(3, pages.getRowCount());
         validateContains(SCHEMA, pages, PATH1, 2, BytesInput.from(BYTES1));
@@ -328,7 +327,7 @@ public class TestParquetFileWriter {
           readFooter.getFileMetaData(),
           path,
           readFooter.getBlocks(),
-          Arrays.asList(SCHEMA.getColumnDescription(PATH1), SCHEMA.getColumnDescription(PATH2)))) {
+          List.of(SCHEMA.getColumnDescription(PATH1), SCHEMA.getColumnDescription(PATH2)))) {
 
         PageReadStore pages = r.readNextRowGroup();
         assertEquals(3, pages.getRowCount());
@@ -478,8 +477,8 @@ public class TestParquetFileWriter {
         configuration,
         readFooter.getFileMetaData(),
         path,
-        Arrays.asList(readFooter.getBlocks().get(0)),
-        Arrays.asList(schema.getColumnDescription(colPath)))) {
+        List.of(readFooter.getBlocks().get(0)),
+        List.of(schema.getColumnDescription(colPath)))) {
       BloomFilterReader bloomFilterReader =
           r.getBloomFilterDataReader(readFooter.getBlocks().get(0));
       BloomFilter bloomFilter = bloomFilterReader.readBloomFilter(
@@ -552,7 +551,7 @@ public class TestParquetFileWriter {
         readFooter.getFileMetaData(),
         path,
         readFooter.getBlocks(),
-        Arrays.asList(SCHEMA.getColumnDescription(PATH1), SCHEMA.getColumnDescription(PATH2)))) {
+        List.of(SCHEMA.getColumnDescription(PATH1), SCHEMA.getColumnDescription(PATH2)))) {
       PageReadStore pages = reader.readNextRowGroup();
       assertEquals(14, pages.getRowCount());
       validateV2Page(
@@ -691,8 +690,8 @@ public class TestParquetFileWriter {
           conf,
           readFooter.getFileMetaData(),
           path,
-          Arrays.asList(readFooter.getBlocks().get(0)),
-          Arrays.asList(SCHEMA.getColumnDescription(PATH1)))) {
+          List.of(readFooter.getBlocks().get(0)),
+          List.of(SCHEMA.getColumnDescription(PATH1)))) {
         PageReadStore pages = r.readNextRowGroup();
         assertEquals(3, pages.getRowCount());
         validateContains(SCHEMA, pages, PATH1, 2, BytesInput.from(BYTES1));
@@ -707,7 +706,7 @@ public class TestParquetFileWriter {
           readFooter.getFileMetaData(),
           path,
           readFooter.getBlocks(),
-          Arrays.asList(SCHEMA.getColumnDescription(PATH1), SCHEMA.getColumnDescription(PATH2)))) {
+          List.of(SCHEMA.getColumnDescription(PATH1), SCHEMA.getColumnDescription(PATH2)))) {
 
         PageReadStore pages = r.readNextRowGroup();
         assertEquals(3, pages.getRowCount());
@@ -819,8 +818,8 @@ public class TestParquetFileWriter {
           conf,
           readFooter.getFileMetaData(),
           path,
-          Arrays.asList(readFooter.getBlocks().get(0)),
-          Arrays.asList(SCHEMA.getColumnDescription(PATH1)))) {
+          List.of(readFooter.getBlocks().get(0)),
+          List.of(SCHEMA.getColumnDescription(PATH1)))) {
         PageReadStore pages = r.readNextRowGroup();
         assertEquals(3, pages.getRowCount());
         validateContains(SCHEMA, pages, PATH1, 2, BytesInput.from(BYTES1));
@@ -835,7 +834,7 @@ public class TestParquetFileWriter {
           readFooter.getFileMetaData(),
           path,
           readFooter.getBlocks(),
-          Arrays.asList(SCHEMA.getColumnDescription(PATH1), SCHEMA.getColumnDescription(PATH2)))) {
+          List.of(SCHEMA.getColumnDescription(PATH1), SCHEMA.getColumnDescription(PATH2)))) {
         PageReadStore pages = r.readNextRowGroup();
         assertEquals(3, pages.getRowCount());
         validateContains(SCHEMA, pages, PATH1, 2, BytesInput.from(BYTES1));
@@ -1011,14 +1010,14 @@ public class TestParquetFileWriter {
     validateFooters(metadata);
 
     footers = ParquetFileReader.readAllFootersInParallelUsingSummaryFiles(
-        configuration, Arrays.asList(fs.listStatus(testDirPath, HiddenFileFilter.INSTANCE)), false);
+        configuration, List.of(fs.listStatus(testDirPath, HiddenFileFilter.INSTANCE)), false);
     validateFooters(footers);
 
     fs.delete(metadataFile.getPath(), false);
     fs.delete(metadataFileLight.getPath(), false);
 
     footers = ParquetFileReader.readAllFootersInParallelUsingSummaryFiles(
-        configuration, Arrays.asList(fs.listStatus(testDirPath)), false);
+        configuration, List.of(fs.listStatus(testDirPath)), false);
     validateFooters(footers);
   }
 
@@ -1351,8 +1350,8 @@ public class TestParquetFileWriter {
       ColumnIndex columnIndex =
           reader.readColumnIndex(blockMeta.getColumns().get(0));
       assertEquals(BoundaryOrder.ASCENDING, columnIndex.getBoundaryOrder());
-      assertTrue(Arrays.asList(1l, 0l).equals(columnIndex.getNullCounts()));
-      assertTrue(Arrays.asList(false, false).equals(columnIndex.getNullPages()));
+      assertTrue(List.of(1l, 0l).equals(columnIndex.getNullCounts()));
+      assertTrue(List.of(false, false).equals(columnIndex.getNullPages()));
       List<ByteBuffer> minValues = columnIndex.getMinValues();
       assertEquals(2, minValues.size());
       List<ByteBuffer> maxValues = columnIndex.getMaxValues();
@@ -1364,8 +1363,8 @@ public class TestParquetFileWriter {
 
       columnIndex = reader.readColumnIndex(blockMeta.getColumns().get(1));
       assertEquals(BoundaryOrder.DESCENDING, columnIndex.getBoundaryOrder());
-      assertTrue(Arrays.asList(0l, 3l, 0l).equals(columnIndex.getNullCounts()));
-      assertTrue(Arrays.asList(false, true, false).equals(columnIndex.getNullPages()));
+      assertTrue(List.of(0l, 3l, 0l).equals(columnIndex.getNullCounts()));
+      assertTrue(List.of(false, true, false).equals(columnIndex.getNullPages()));
       minValues = columnIndex.getMinValues();
       assertEquals(3, minValues.size());
       maxValues = columnIndex.getMaxValues();
@@ -1407,8 +1406,8 @@ public class TestParquetFileWriter {
         assertNotNull(reader.readColumnIndex(blockMeta.getColumns().get(0)));
         columnIndex = reader.readColumnIndex(blockMeta.getColumns().get(0));
         assertEquals(BoundaryOrder.ASCENDING, columnIndex.getBoundaryOrder());
-        assertTrue(Arrays.asList(0l).equals(columnIndex.getNullCounts()));
-        assertTrue(Arrays.asList(false).equals(columnIndex.getNullPages()));
+        assertTrue(List.of(0l).equals(columnIndex.getNullCounts()));
+        assertTrue(List.of(false).equals(columnIndex.getNullPages()));
         minValues = columnIndex.getMinValues();
         assertEquals(1, minValues.size());
         maxValues = columnIndex.getMaxValues();
